Fix inputs for mobile devices
Inputs were sticking out of the page to the right. Added
flex-wrap: wrap; to the fieldsets so that items would now wrap.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+input {
+    appearance: none;
+}
+
 @font-face {
     font-family: 'norsebold';
     src: url('fonts/norse-bold-webfont.woff2') format('woff2'),
@@ -122,6 +126,7 @@ form {
 
 fieldset {
     border: none;
+    flex-wrap: wrap;
     gap: 2vw;
     padding: 0;
 }
